src/App.css
#root {
  max-width: 1280px;
  min-width: 20px;
  margin: 0 auto;
  padding: 1rem;
  text-align: center;
}

* {
  /* border: 1px solid green; */
  box-sizing: border-box;
  margin: 0;
}

body {
  background-color: #0b2434;
}

main {
  display: flex;
  flex-direction: column;
  margin: 100px, auto;
  align-items: center;
  justify-content: center;
  max-width: 720px;
  /* height: 720px; */
}

.language-buttons {
  color: #340b0b;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  margin: 20px 0px;
}

.language-buttons > img {
  height: 30px;
  cursor: pointer;
  border: 1px solid #340b0b;
}

.instructions {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  margin: 0px 20px;
  text-align: center;
  color: #340b0b;
  font-size: 1.5rem;
}
.gameArea {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin: 30px, 20px;
  border-radius: 20px;
  background-color: #f5f5f5;
  min-width: 300px;
  max-width: 500px;
  height: 600px;
}

.gameArea > h1 {
  color: #340b0b;
  font-size: 3rem;
  font-weight: 700;
  margin: 0;
  padding: 0;
}

.dice {
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(5, 1fr);
  gap: 20px;
}

.die {
  min-width: 35px;
  min-height: 35px;
  font-family: "Karla";
  font-style: normal;
  font-weight: 700;
  font-size: 1rem;
  line-height: 24px;
  text-align: center;
  border-radius: 10px;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
  color: #2b283a;
  cursor: pointer;
  background-color: white;
}

.die:hover {
  background-color: #f5f5f5;
}
.button--roll {
  background: #5035ff;
  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
  border-radius: 3.81277px;
  font-size: 1.5rem;
}

.button--roll:focus {
  outline: none;
}

.button--roll:active {
  background: #5035ff;
  box-shadow: inset 0px 1.6px 3.84px rgba(0, 0, 0, 0.18);
}
.isHeld {
  background-color: #59e391;
  color: white;
}

.button--stats {
  background: #5035ff;
  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
  border-radius: 3.81277px;
  margin: 30px 0px;
  padding: 10px;
}

.button--resetStats {
  background: #5035ff;
  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
  border-radius: 3.81277px;
  padding: 10px;
  margin: 10px 0px;
}

.stats {
  display: flex;
  color: #2b283a;
  font-size: 1.2rem;
  justify-content: space-evenly;
  flex-direction: column;
  align-items: center;
  /* margin: 30px, 100px; */
  border-radius: 20px;
  background-color: #f5f5f5;
  line-height: 2rem;
  width: 200px;
  /* height: 250px; */
  padding: 10px 0px;
}

.statsContainer {
  display: flex;
  flex-direction: column;
  /* justify-content: center; */

  align-items: center;
  height: 300px;
}

